distance scale set up, planet relative size, sun center, zoom-out at 25%

--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
      <link rel="stylesheet" href="style.css">
      <title>solar</title>
  </head>
+
  <body>
+   <h1>The Solar System</h1>
     <div class="sun">s</div>
-    <div class="mercury">m</div>
-    <div class="venus">v</div>
-    <div class='earth'>e</div>
-    <div class='mars'>m</div>
-    <div class='jupiter'>j</div>
-    <div class='saturn'>s</div>
-    <div class='uranus'>u</div>
-    <div class='neptune'>n</div>
-    <div></div>
+    <section class="planets">
+      <div class="mercury">m</div>
+      <div class="venus">v</div>
+      <div class='earth'>e</div>
+      <div class='mars'>m</div>
+      <div class='jupiter'>j</div> 
+      <div class='saturn'>s</div>
+      <div class='uranus'>u</div>
+      <div class='neptune'>n</div>
+    </section>   
  </body>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="script.js""></script>
