got the planets to orbit a central object. At this time distance and orbital rate, and scale is negligible.

--- a/index.html
+++ b/index.html
@@ -6,20 +6,35 @@
      <link rel="stylesheet" href="style.css">
      <title>solar</title>
  </head>
-
+ <h1>The Solar System</h1>
  <body>
-   <h1>The Solar System</h1>
-    <div class="sun">s</div>
-    <section class="planets">
-      <div class="mercury">m</div>
-      <div class="venus">v</div>
-      <div class='earth'>e</div>
-      <div class='mars'>m</div>
-      <div class='jupiter'>j</div> 
-      <div class='saturn'>s</div>
-      <div class='uranus'>u</div>
-      <div class='neptune'>n</div>
-    </section>   
+   <div id="space">
+      <div id="sun"></div>
+      <div id="mercury">
+         <div id="mer"></div>
+      </div>
+      <div id="venus">
+         <div id='ven'></div>
+      </div>
+      <div id="earth">
+         <div id='eart'></div>
+      </div>
+      <div id="mars">
+         <div id='mar'></div>
+      </div>
+      <div id="jupiter">
+         <div id='jup'></div>
+      </div>
+      <div id="saturn">
+         <div id='sat'></div>
+      </div>
+      <div id="uranus">
+         <div id='uran'></div>
+      </div>
+      <div id="neptune">
+         <div id='nept'></div>
+      </div>
+   </div>
  </body>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="script.js""></script>
