got API sorted to return planet only data, set up element where info will be displayed

--- a/index.html
+++ b/index.html
@@ -6,33 +6,38 @@
      <link rel="stylesheet" href="style.css">
      <title>solar</title>
  </head>
- <h1>The Solar System</h1>
  <body>
+   <h1>Solar System</h1>
+   <!-- <section class="information"></section> -->
+
    <div id="space">
-      <div id="sun"></div>
+      <section class="information">
+         information goes here
+      </section>
+      <div class="planet" id="sun"></div>
       <div id="mercury">
-         <div id="mer"></div>
+         <div class="planet" id="mer"></div>
       </div>
       <div id="venus">
-         <div id='ven'></div>
+         <div class="planet" id='ven'></div>
       </div>
       <div id="earth">
-         <div id='eart'></div>
+         <div class="planet" id='eart'></div>
       </div>
       <div id="mars">
-         <div id='mar'></div>
+         <div class="planet" id='mar'></div>
       </div>
       <div id="jupiter">
-         <div id='jup'></div>
+         <div class="planet" id='jup'></div>
       </div>
       <div id="saturn">
-         <div id='sat'></div>
+         <div class="planet" id='sat'></div>
       </div>
       <div id="uranus">
-         <div id='uran'></div>
+         <div class="planet" id='uran'></div>
       </div>
       <div id="neptune">
-         <div id='nept'></div>
+         <div class="planet" id='nept'></div>
       </div>
    </div>
  </body>
