finalized front page, added the navigation to inner, outer and main pages

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
  </head>
  <body>
    <h1>Solar System</h1>
-   <!-- <section class="information"></section> -->
-
+   <nav>
+      <ul>Main</ul>
+      <ul>Inner Planets</ul>
+      <ul>Outer Planets</ul>
+   </nav>
+   <h2>The diagram shows the dots(planets) orbiting scaled down to the orbital speed of mercury.</h2>
    <div id="space">
-      <section class="information">
-         information goes here
-      </section>
       <div class="planet" id="sun"></div>
       <div id="mercury">
          <div class="planet" id="mer"></div>
