add inner and outer planet html, along with images. All pages linked up to each other

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
  <body>
    <h1>Solar System</h1>
    <nav>
-      <ul>Main</ul>
-      <ul>Inner Planets</ul>
-      <ul>Outer Planets</ul>
+      <a href="index.html"><ul>Main</ul></a>
+      <a href="inner.html"><ul>Inner Planets</ul></a>
+      <a href="outer.html"><ul>Outer Planets</ul></a>
    </nav>
    <h2>The diagram shows the dots(planets) orbiting scaled down to the orbital speed of mercury.</h2>
    <div id="space">
