add event listeners to all the planets. Positive return

--- a/outer.html
+++ b/outer.html
@@ -7,7 +7,7 @@
     
     <title>Document</title>
 </head>
-<h1>Inner Planets</h1>
+<h1>Outer Planets</h1>
 <nav>
     <a href="index.html"><ul>Main</ul></a>
     <a href="inner.html"><ul>Inner Planets</ul></a>
@@ -15,13 +15,13 @@
  </nav>
 <body>
     <section class="space">
-        <div class="space" id="jupiter"><img src="images/jupiter.png" alt="picture of jupiter" width="500" height="500"</div>
-        <div class="space" id="saturn"><img src="images/saturn.png" alt="picture of saturn" width="416" height="275"</div>
-        <div class="space" id="uranus"><img src="images/uranus.png" alt="picture of uranus" width="181" height=""</div>
-        <div class="space" id="neptune"><img src="images/neptune.png" alt="picture of neptune" width="176" height="176"</div>
+        <div class="space"><img src="images/jupiter.png" alt="picture of jupiter" width="500" height="500" id="jupiter"></div>
+        <div class="space"><img src="images/saturn.png" alt="picture of saturn" width="416" height="275" id="saturn"></div>
+        <div class="space"><img src="images/uranus.png" alt="picture of uranus" width="181" height="" id="uranus"></div>
+        <div class="space"><img src="images/neptune.png" alt="picture of neptune" width="176" height="176" id="neptune"></div>
     </section>
     
 </body>
-<script src="https://unpkg.com/axios/dist/axios.min.js" alt="picture of sun" width="300" height="200"></script>
-<script src="script_inner.js""></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="script_outer.js""></script>
 </html>
