--- a/inner.html
+++ b/inner.html
@@ -15,10 +15,10 @@
  </nav>
 <body>
     <section class="space">
-        <div class="space" id="mercury"><img src="images/mercury.png" alt="picture of sun" width="100" height="100"</div>
-        <div class="space" id="venus"><img src="images/venus.png" alt="picture of sun" width="260" height="260"</div>
-        <div class="space" id="earth"><img src="images/earth.png" alt="picture of sun" width="280" height="280"</div>
-        <div class="space" id="mars"><img src="images/mars.png" alt="picture of sun" width="140" height="140"</div>
+        <div class="space"></div><img src="images/mercury.png" alt="picture of mercury" width="100" height="100" id="mercury"></div>
+        <div class="space"><img src="images/venus.png" alt="picture of venus" width="260" height="260" id="venus"></div>
+        <div class="space"><img src="images/earth.png" alt="picture of earth" width="280" height="280" id="earth"></div>
+        <div class="space"><img src="images/mars.png" alt="picture of mars" width="140" height="140" id="mars"></div>
     </section>
     
 </body>
