add functions to each planet that returns data from the API on click

--- a/inner.html
+++ b/inner.html
@@ -15,13 +15,14 @@
  </nav>
 <body>
     <section class="space">
-        <div class="space"></div><img src="images/mercury.png" alt="picture of mercury" width="100" height="100" id="mercury"></div>
-        <div class="space"><img src="images/venus.png" alt="picture of venus" width="260" height="260" id="venus"></div>
-        <div class="space"><img src="images/earth.png" alt="picture of earth" width="280" height="280" id="earth"></div>
-        <div class="space"><img src="images/mars.png" alt="picture of mars" width="140" height="140" id="mars"></div>
+        <div class="space planets" ><img id="Mercury" src="images/mercury.png" alt="picture of mercury" width="100" height="100"></div>
+        <div class="space planets" ><img id="Venus" src="images/venus.png" alt="picture of venus" width="260" height="260"></div>
+        <div class="space planets" ><img id="Earth" src="images/earth.png" alt="picture of earth" width="280" height="280"></div>
+        <div class="space planets" ><img id="Mars" src="images/mars.png" alt="picture of mars" width="140" height="140"></div>
     </section>
     
 </body>
-<script src="https://unpkg.com/axios/dist/axios.min.js" alt="picture of sun" width="300" height="200"></script>
-<script src="script_inner.js""></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<!-- <script src="script.js""></script> -->
+<script src="script_inner.js"></script>
 </html>
