--- a/outer.html
+++ b/outer.html
@@ -15,10 +15,10 @@
  </nav>
 <body>
     <section class="space">
-        <div class="space planets" id="jupiter"><img id="jupiter" src="images/jupiter.png" alt="picture of jupiter" width="500" height="500"></div>
-        <div class="space planets" id="saturn"><img src="images/saturn.png" alt="picture of saturn" width="416" height="275" id="saturn"></div>
-        <div class="space planets" id="uranus"><img src="images/uranus.png" alt="picture of uranus" width="181" height="" id="uranus"></div>
-        <div class="space planets" id="neptune"><img src="images/neptune.png" alt="picture of neptune" width="176" height="176" id="neptune"></div>
+        <div class="space planets" ><img id="Jupiter" src="images/jupiter.png" alt="picture of jupiter" width="500" height="500"></div>
+        <div class="space planets" ><img id="Saturn" src="images/saturn.png" alt="picture of saturn" width="416" height="275"></div>
+        <div class="space planets" ></div><img  id="Uranus" src="images/uranus.png" alt="picture of uranus" width="181" height=""></div>
+        <div class="space planets" ><img id="Neptune"src="images/neptune.png" alt="picture of neptune" width="176" height="176"></div>
     </section>
     
 </body>
