--- a/outer.html
+++ b/outer.html
@@ -14,13 +14,14 @@
     <a href="outer.html"><ul>Outer Planets</ul></a>
  </nav>
 <body>
-    <section class="space">
+    <section class="space popover">
         <div class="space planets" ><img id="Jupiter" src="images/jupiter.png" alt="picture of jupiter" width="500" height="500"></div>
         <div class="space planets" ><img id="Saturn" src="images/saturn.png" alt="picture of saturn" width="416" height="275"></div>
         <div class="space planets" ></div><img  id="Uranus" src="images/uranus.png" alt="picture of uranus" width="181" height=""></div>
         <div class="space planets" ><img id="Neptune"src="images/neptune.png" alt="picture of neptune" width="176" height="176"></div>
+        <section class="information"></section>
     </section>
-    
+   
 </body>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="script_outer.js""></script>
