add style to outer planets, display info for each planet

--- a/outer.html
+++ b/outer.html
@@ -14,7 +14,7 @@
     <a href="outer.html"><ul>Outer Planets</ul></a>
  </nav>
 <body>
-    <section class="space popover">
+    <section class="space">
         <div class="space planets" ><img id="Jupiter" src="images/jupiter.png" alt="picture of jupiter" width="500" height="500"></div>
         <div class="space planets" ><img id="Saturn" src="images/saturn.png" alt="picture of saturn" width="416" height="275"></div>
         <div class="space planets" ></div><img  id="Uranus" src="images/uranus.png" alt="picture of uranus" width="181" height=""></div>
