add inner planets, earth and mars work

--- a/inner.html
+++ b/inner.html
@@ -19,10 +19,10 @@
         <div class="space planets" ><img id="Venus" src="images/venus.png" alt="picture of venus" width="260" height="260"></div>
         <div class="space planets" ><img id="Earth" src="images/earth.png" alt="picture of earth" width="280" height="280"></div>
         <div class="space planets" ><img id="Mars" src="images/mars.png" alt="picture of mars" width="140" height="140"></div>
+        <section class="information"></section>
     </section>
     
 </body>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<!-- <script src="script.js""></script> -->
 <script src="script_inner.js"></script>
 </html>
