add style to all pages

--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
  <html lang="en">
- <head>
+ <head> 
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="mainstyle/style.css">
      <title>solar</title>
  </head>
- <body>
-   <h1>Solar System</h1>
+ <body>   
+   <h1>The Solar System</h1>
    <nav>
       <a href="index.html"><ul>Main</ul></a>
       <a href="inner.html"><ul>Inner Planets</ul></a>
       <a href="outer.html"><ul>Outer Planets</ul></a>
    </nav>
-   <h2>The diagram shows the dots(planets) orbiting scaled down to the orbital speed of mercury.</h2>
+   <h2>Click on the links above to get more information about the planet in our solar system. </br>
+      The diagram shows the planets(dots) orbiting, scaled down to the orbital speed of mercury times 10.</br>
+      All starting at the same position.The planet images are scaled to Jupiter</br>
+      for the inner planets, and Mercury for the inner planets. Future updates will show the planets</br>
+      in 3-D.</h2>
    <div id="space">
       <div class="planet" id="sun"></div>
       <div id="mercury">
@@ -43,5 +47,5 @@
    </div>
  </body>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="script.js""></script>
+    <script src="script/script.js""></script>
  </html>
