--- a/inner.html
+++ b/inner.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="inner_style.css">
+    <link rel="stylesheet" href="mainstyle/inner_style.css">
     
     <title>Document</title>
 </head>
@@ -21,8 +21,7 @@
         <div class="space planets" ><img id="Mars" src="images/mars.png" alt="picture of mars" width="140" height="140"></div>
         <section class="information"></section>
     </section>
-    
 </body>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="script_inner.js"></script>
+<script src="script/script_inner.js"></script>
 </html>
