--- a/outer.html
+++ b/outer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="outer.css">
+    <link rel="stylesheet" href="mainstyle/outer.css">
     
     <title>Document</title>
 </head>
@@ -24,5 +24,5 @@
    
 </body>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="script_outer.js""></script>
+<script src="script/script_outer.js""></script>
 </html>
