--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
          <div class="planet" id='nept'></div>
       </div>
    </div>
+   <button id='stop'>Stop Animation</button>
  </body>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="script/script.js""></script>
