added the animation removal button to all pages

--- a/inner.html
+++ b/inner.html
@@ -21,6 +21,7 @@
         <div class="space planets" ><img id="Mars" src="images/mars.png" alt="picture of mars" width="140" height="140"></div>
         <section class="information"></section>
     </section>
+    <button id='stop'>Stop Animation</button>
 </body>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="script/script_inner.js"></script>
