--- a/outer.html
+++ b/outer.html
@@ -21,7 +21,7 @@
         <div class="space planets" ><img id="Neptune"src="images/neptune.png" alt="picture of neptune" width="176" height="176"></div>
         <section class="information"></section>
     </section>
-   
+    <button id='stop'>Stop Animation</button>
 </body>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="script/script_outer.js""></script>
