--- a/inner.html
+++ b/inner.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mainstyle/inner_style.css">
     
-    <title>Document</title>
+    <title>Solar</title>
 </head>
 <h1>Inner Planets</h1>
 <nav>
