--- a/outer.html
+++ b/outer.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mainstyle/outer.css">
-    
-    <title>Document</title>
+    <title>Solar</title>
 </head>
 <h1>Outer Planets</h1>
 <nav>
