--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a href="inner.html"><ul>Inner Planets</ul></a>
       <a href="outer.html"><ul>Outer Planets</ul></a>
    </nav>
-   <h2>Click on the links above to get more information about the planet in our solar system. </br>
+   <h2>Click on the links above to get more information about the planets in our solar system. </br>
       The diagram shows the planets(dots) orbiting, scaled down to the orbital speed of mercury times 10.</br>
       All starting at the same position.The planet images are scaled to Jupiter</br>
       for the inner planets, and Mercury for the inner planets. Future updates will show the planets</br>
