--- a/inner.html
+++ b/inner.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mainstyle/inner_style.css">
-    
-    <title>Solar</title>
+    <link rel="stylesheet" href="mainstyle/planets/earth.css">
+    <title>Solar</title>    
 </head>
 <h1>Inner Planets</h1>
 <nav>
@@ -15,10 +15,10 @@
  </nav>
 <body>
     <section class="space">
-        <div class="space planets" ><img id="Mercury" src="images/mercury.png" alt="picture of mercury" width="100" height="100"></div>
-        <div class="space planets" ><img id="Venus" src="images/venus.png" alt="picture of venus" width="260" height="260"></div>
-        <div class="space planets" ><img id="Earth" src="images/earth.png" alt="picture of earth" width="280" height="280"></div>
-        <div class="space planets" ><img id="Mars" src="images/mars.png" alt="picture of mars" width="140" height="140"></div>
+        <figure class='planet' id='Mercury'></figure>
+        <figure class='planet' id='Venus'></figure>
+        <figure class='planet' id='Earth'></figure>
+        <figure class='planet' id='Mars'></figure>
         <section class="information"></section>
     </section>
     <button id='stop'>Stop Animation</button>
