refactored title and main content

--- a/index.html
+++ b/index.html
@@ -9,25 +9,28 @@
 </head>
 
 <body>
-   <h1 className="main-title">The Solar System</h1>
-   <nav className="nav-main">
-      <a href="index.html">
-         <ul>Main</ul>
-      </a>
-      <a href="inner.html">
-         <ul>Inner Planets</ul>
-      </a>
-      <a href="outer.html">
-         <ul>Outer Planets</ul>
-      </a>
-   </nav>
-   <h2 className="main-content">Click on the links above to get more information about the planets in our solar system.
-      </br>
-      The diagram shows the planets(dots) orbiting, scaled down to the orbital speed of mercury times 10.</br>
-      All starting at the same position.The planet images are scaled to Jupiter</br>
-      for the inner planets, and Mercury for the inner planets. Future updates will show the planets</br>
-      in 3-D.</h2>
-   <div id="space">
+   <div class="main">
+      <h1 class="main-title">The Solar System</h1>
+      <nav class="nav-main">
+         <a href="index.html">
+            <ul>Main</ul>
+         </a>
+         <a href="inner.html">
+            <ul>Inner Planets</ul>
+         </a>
+         <a href="outer.html">
+            <ul>Outer Planets</ul>
+         </a>
+      </nav>
+      <h2 class="main-content">Click on the links above to get more information about the planets in our solar system.
+         </br>
+         The diagram shows the planets(dots) orbiting, scaled down to the orbital speed of mercury times 10.</br>
+         All starting at the same position.The planet images are scaled to Jupiter</br>
+         for the inner planets, and Mercury for the inner planets. Future updates will show the planets</br>
+         in 3-D.
+      </h2>
+   </div>
+   <div class="space">
       <div class="planet" id="sun"></div>
       <div id="mercury">
          <div class="planet" id="mer"></div>
@@ -53,8 +56,8 @@
       <div id="neptune">
          <div class="planet" id='nept'></div>
       </div>
-   </div>
-   <button className="animation-button" id='stop'>Stop Animation</button>
+   </div> -->
+   <!-- <button className="animation-button" id='stop'>Stop Animation</button>
 </body>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="script/script.js""></script>
