refactored main page, working

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       <div id="neptune">
          <div class="planet" id='nept'></div>
       </div>
-   </div> -->
-   <!-- <button className="animation-button" id='stop'>Stop Animation</button>
+   </div> 
+   <button class="animation-button" id='stop'>Stop Stars</button>
 </body>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="script/script.js""></script>
