final commit for display purposes

--- a/inner.html
+++ b/inner.html
@@ -28,9 +28,9 @@
         <figure class='planet' id='Mars'></figure>
     </section>
     <section class="information"></section>
-    <button id='stop'>Stop Animation</button>
+    <button class="animation-button" id='stop'>Stop Stars</button>
 </body>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="script/script_inner.js"></script>
 
-</html>
+</html>f
